--- a/Sjuklöner/Views/Claims/Create4.cshtml
+++ b/Sjuklöner/Views/Claims/Create4.cshtml
@@ -1,6 +1,8 @@
 ﻿@model Sjuklöner.Viewmodels.Create4VM
 @{
-    ViewBag.Title = "Bilagor";
+                /**/
+
+                ViewBag.Title = "Bilagor";
 }
 
 <div class="row margin-breadcrumb">
@@ -24,6 +26,22 @@
         <p class="page-header3 col col-md-10">Ansökan om sjuklöneersättning</p>
         <br>
     </div>
+    if (TempData["PdfSuccess"] != null)
+    {
+        <div class="Event alert alert-success" id="PdfEventOmbudCreate4">
+            <h3>
+                @TempData["PdfSuccess"]
+            </h3>
+        </div>
+    }
+    if (TempData["PdfFail"] != null)
+    {
+        <div class="Event alert alert-danger" id="PdfEventOmbudCreate4">
+            <h3>
+                @TempData["PdfFail"]
+            </h3>
+        </div>
+    }
     <div class="row">
         <p class="col col-md-2"></p>
         <p class="col col-md-10 second-page-header2">Steg 4 av 4: Ladda upp bilagor och skicka in ansökan</p>
@@ -198,6 +216,9 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+<script type="text/javascript">
+    $('#PdfEventOmbudCreate4').delay(4000).hide(1500);
+</script>
 <script>
     $(function () {
         $(".js-show-view-btn").click(function (e) {
