--- a/Sjuklöner/Views/Claims/Create3.cshtml
+++ b/Sjuklöner/Views/Claims/Create3.cshtml
@@ -40,7 +40,7 @@
     }
     if (TempData["PdfFail"] != null)
     {
-        <div class="Event alert alert-danger" id="PdfEventOmbudCreate3">
+        <div class="Event alert alert-danger" id="PdfEventOmbudCreate3Fail">
             <h3>
                 @TempData["PdfFail"]
             </h3>
@@ -158,6 +158,9 @@
 }
 <script type="text/javascript">
     $('#PdfEventOmbudCreate3').delay(4000).hide(1500);
+</script>
+<script type="text/javascript">
+    $('#PdfEventCreate3Fail').delay(100000).hide(1500);
 </script>
 <script type='text/javascript'>
     function calculateSum() {
