--- a/Sjuklöner/Views/Claims/Recommend.cshtml
+++ b/Sjuklöner/Views/Claims/Recommend.cshtml
@@ -16,139 +16,6 @@
     @Html.HiddenFor(model => model.AssistanceCheck)
     @Html.HiddenFor(model => model.ProxyCheck)
 
-    @*<div class="row no-breadcrumb-top">
-            <div class="form-horizontal">
-                <div class="form-group col line-height-10">
-                    @Html.LabelFor(model => model.ClaimNumber, htmlAttributes: new { @class = "control-label control-label-large col-md-6" })
-                    <div class="col-md-6 display-large-font" id="referencenumber">
-                        @Html.HiddenFor(model => Model.ClaimNumber, null)
-                        @Html.ActionLink(Model.ClaimNumber, "_ShowClaim", new { refNumber = Model.ClaimNumber }, new { @style = "margin-left:10px;", @class = "btn-sm js-show-view-btn btn btn-secondary" })
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <p class="col col-md-6 second-page-header-large">Automatiserade kontroller</p>
-        </div>
-
-        <div class="row">
-            <div class="form-horizontal">
-
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-                <div class="form-group col line-height-06">
-                    @Html.LabelFor(model => model.IvoCheck, htmlAttributes: new { @class = "control-label control-label-large col-md-6" })
-                    @if (!Model.IvoCheck)
-                    {
-                        <div class="col-md-6 align-bottom3 control-label-large decision-padding-left negative-result" id="ProCapitaCheck">
-                            <img class="check-result-img" src="~/Content/Images/red.jpg" />@Html.DisplayFor(model => Model.IvoCheckMsg)
-                        </div>
-                    }
-                    else
-                    {
-                        <div class="col-md-6 align-bottom3 control-label-large decision-padding-left positive-result" id="ProCapitaCheck">
-                            <img class="check-result-img" src="~/Content/Images/green.png" />@Html.DisplayFor(model => Model.IvoCheckMsg)
-                        </div>
-                    }
-                </div>
-
-                <div class="form-group col line-height-06">
-                    @Html.LabelFor(model => model.AssistanceCheck, htmlAttributes: new { @class = "control-label control-label-large col-md-6" })
-                    @if (!Model.AssistanceCheck)
-                    {
-                        <div class="col-md-6 align-bottom3 control-label-large decision-padding-left negative-result" id="ProCapitaCheck">
-                            <img class="check-result-img" src="~/Content/Images/red.jpg" />@Html.DisplayFor(model => Model.AssistanceCheckMsg)
-                        </div>
-                    }
-                    else
-                    {
-                        <div class="col-md-6 align-bottom3 control-label-large decision-padding-left positive-result" id="ProCapitaCheck">
-                            <img class="check-result-img" src="~/Content/Images/green.png" />@Html.DisplayFor(model => Model.AssistanceCheckMsg)
-                        </div>
-                    }
-                </div>
-                <div class="form-group col line-height-06">
-                    @Html.LabelFor(model => model.ProxyCheck, htmlAttributes: new { @class = "control-label control-label-large col-md-6" })
-                    @if (!Model.ProxyCheck)
-                    {
-                        <div class="col-md-6 align-bottom3 control-label-large decision-padding-left negative-result" id="ProCapitaCheck">
-                            <img class="check-result-img" src="~/Content/Images/red.jpg" />@Html.DisplayFor(model => Model.ProxyCheckMsg)
-                        </div>
-                    }
-                    else
-                    {
-                        <div class="col-md-6 align-bottom3 control-label-large decision-padding-left positive-result" id="ProCapitaCheck">
-                            <img class="check-result-img" src="~/Content/Images/green.png" />@Html.DisplayFor(model => Model.ProxyCheckMsg)
-                        </div>
-                    }
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <p class="col col-md-6 second-page-header-large">Ersättningsbedömning</p>
-        </div>
-        <div class="row">
-            <div class="form-horizontal">
-                <div class="form-group col line-height-06">
-                    @Html.LabelFor(model => model.ClaimSum, htmlAttributes: new { @class = "control-label control-label-large col-md-6" })
-                    <div class="col-md-6 align-bottom3 display-large-font decision-padding-left" id="claimsum">
-                        @Html.DisplayFor(model => Model.ClaimSum)
-                    </div>
-                </div>
-
-                <div class="form-group col line-height-06">
-                    @Html.LabelFor(model => model.ModelSum, htmlAttributes: new { @class = "control-label control-label-large col-md-6" })
-                    <div class="col-md-6 align-bottom3 display-large-font decision-padding-left" id="modelsum">
-                        @Html.DisplayFor(model => model.ModelSum)
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="form-horizontal">
-                <div class="form-group col line-height-10">
-                    @Html.LabelFor(model => model.ApprovedSum, htmlAttributes: new { @class = "control-label control-label-large col-md-6 highlight-green" })
-                    <div class="col col-md-1">
-                        @Html.EditorFor(model => model.ApprovedSum, new { htmlAttributes = new { @class = "form-control large-form-control control-width-small highlight-green", id = "approvedsum", onblur = "calculateSum(1)" } })
-                        @Html.ValidationMessageFor(model => model.ApprovedSum, null, new { @class = "text-danger" }, null)
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="form-horizontal">
-                <div class="form-group col line-height-10">
-                    @Html.LabelFor(model => model.RejectedSum, htmlAttributes: new { @class = "control-label control-label-large col-md-6 highlight-red" })
-                    <div class="col col-md-1">
-                        @Html.EditorFor(model => model.RejectedSum, new { htmlAttributes = new { @class = "form-control large-form-control control-width-small highlight-red", id = "rejectedsum", onblur = "calculateSum(2)" } })
-                        @Html.ValidationMessageFor(model => model.RejectedSum, null, new { @class = "text-danger" }, null)
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row line-height-10">
-            <div class="hidden-by-default" id="claimnumber">@Model.ClaimNumber</div>
-            <div id='myModal' class='modal' style="text-align:left;">
-                <div class="modal-dialog" style="width:85%; height:400px; padding:10px;">
-                    <div class="modal-content" style="overflow: auto; padding:10px; background-color:#fbf9ef;">
-                        <button type="button" id="closbtn" float="right"> Stäng </button>
-                        <div style="height:10px;">
-                        </div>
-                        <div id='myModalContent' style="width:1200px; height:400px; padding:10px;">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>*@
-
-
-    @*2.0*@
-
-
     <div class="row no-breadcrumb-top2">
         <div class="form-horizontal">
             <div class="form-group margin-bottom-small col line-height-10">
@@ -268,20 +135,20 @@
                 </div>*@
 
             @*<div class="form-group margin-bottom-small col line-height-06">
-                @Html.LabelFor(model => model.SickleaveNotificationCheck, htmlAttributes: new { @class = "control-label control-label-large2 col-md-4" })
-                @if (!Model.SickleaveNotificationCheck)
-                {
-                    <div class="col-md-8 align-bottom8 display-result decision-padding-left negative-result" id="ProCapitaCheck">
-                        <img class="check-result-img" src="~/Content/Images/red.jpg" />@Html.DisplayFor(model => Model.SickleaveNotificationCheckMsg)
-                    </div>
-                }
-                else
-                {
-                    <div class="col-md-8 align-bottom8 display-result decision-padding-left positive-result" id="ProCapitaCheck">
-                        <img class="check-result-img" src="~/Content/Images/green.png" />@Html.DisplayFor(model => Model.SickleaveNotificationCheckMsg)
-                    </div>
-                }
-            </div>*@
+                    @Html.LabelFor(model => model.SickleaveNotificationCheck, htmlAttributes: new { @class = "control-label control-label-large2 col-md-4" })
+                    @if (!Model.SickleaveNotificationCheck)
+                    {
+                        <div class="col-md-8 align-bottom8 display-result decision-padding-left negative-result" id="ProCapitaCheck">
+                            <img class="check-result-img" src="~/Content/Images/red.jpg" />@Html.DisplayFor(model => Model.SickleaveNotificationCheckMsg)
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="col-md-8 align-bottom8 display-result decision-padding-left positive-result" id="ProCapitaCheck">
+                            <img class="check-result-img" src="~/Content/Images/green.png" />@Html.DisplayFor(model => Model.SickleaveNotificationCheckMsg)
+                        </div>
+                    }
+                </div>*@
 
             @if (Model.NumberOfSickDays > 7)
             {
@@ -320,7 +187,18 @@
             </div>
 
             <div class="form-group margin-bottom-small col line-height-06">
-                @Html.LabelFor(model => model.FKSubAssistantCheck, htmlAttributes: new { @class = "control-label control-label-large2 col-md-4" })
+                @if (Model.NumberOfSubAssistants == 1)
+                {
+                    <div class="control-label control-label-large2 col-md-4">
+                        Tidsredovisning, vikarierande assistent:
+                    </div>
+                }
+                else
+                {
+                    <div class="control-label control-label-large2 col-md-4">
+                        Tidsredovisning, vikarierande assistent 1:
+                    </div>
+                }
                 @if (!Model.FKSubAssistantCheck)
                 {
                     <div class="col-md-8 align-bottom8 display-result decision-padding-left negative-result" id="ProCapitaCheck">
@@ -334,6 +212,30 @@
                     </div>
                 }
             </div>
+
+            @if (Model.NumberOfSubAssistants > 1)
+            {
+                for (int i = 0; i < Model.NumberOfSubAssistants - 1; i++)
+                {
+                    <div class="form-group margin-bottom-small col line-height-06">
+                        <div class="control-label control-label-large2 col-md-4">
+                            Tidsredovisning, vikarierande assistent @(i + 2):
+                        </div>
+                        @if (!Model.FKSubAssistantCheckBoolArray[i])
+                        {
+                            <div class="col-md-8 align-bottom8 display-result decision-padding-left negative-result" id="ProCapitaCheck">
+                                <img class="check-result-img" src="~/Content/Images/red.jpg" />@Html.DisplayFor(model => Model.FKSubAssistantCheckMsgArray[i])
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="col-md-8 align-bottom8 display-result decision-padding-left positive-result" id="ProCapitaCheck">
+                                <img class="check-result-img" src="~/Content/Images/green.png" />@Html.DisplayFor(model => Model.FKSubAssistantCheckMsgArray[i])
+                            </div>
+                        }
+                    </div>
+                }
+            }
         </div>
     </div>
 
